refactoring to be an all-in-one library